--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" ng-app="myResumeApp">
 
@@ -45,6 +45,9 @@
 
     <script src="app/directives/resume.js"></script>
     <script src="app/directives/coordonnee-person.js"></script>
+    <script src="app/directives/xp.js"></script>
+    <script src="app/directives/hobcomp.js"></script>
+    <script src="app/directives/sidenav.js"></script>
 
     <script src="app/filters/moment-format.js"></script>
     <script src="app/filters/level-format.js"></script>
@@ -54,5 +57,6 @@
     <script src="app/models/_collection.js"></script>
     <script src="app/models/Resume.js"></script>
     <script src="app/models/Resumes.js"></script>
+    
 
 </html>
