--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,8 @@
     <script src="app/directives/xp.js"></script>
     <script src="app/directives/hobcomp.js"></script>
     <script src="app/directives/sidenav.js"></script>
+    <script src="app/directives/message-list.js"></script>
+    <script src="app/directives/message-box.js"></script>
 
     <script src="app/filters/moment-format.js"></script>
     <script src="app/filters/level-format.js"></script>
