Insertion dans la base d'un message via le web

--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,7 @@
     <script src="app/directives/xp.js"></script>
     <script src="app/directives/hobcomp.js"></script>
     <script src="app/directives/sidenav.js"></script>
+    <script src="app/directives/message.js"></script>
     <script src="app/directives/message-list.js"></script>
     <script src="app/directives/message-box.js"></script>
 
