Added messages list + some corrections to the directives for educations

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
     <script src="app/directives/hobcomp.js"></script>
     <script src="app/directives/sidenav.js"></script>
     <script src="app/directives/message.js"></script>
-    <script src="app/directives/message-list.js"></script>
+    <script src="app/directives/msglst.js"></script>
     <script src="app/directives/message-box.js"></script>
 
     <script src="app/filters/moment-format.js"></script>
