--- a/index.html
+++ b/index.html
@@ -19,30 +19,139 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="l3webtd3" class="anchor" href="#l3webtd3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>L3WebTD3</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h2>
+<a id="td3" class="anchor" href="#td3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TD3</h2>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="angular-js--directive---factory--node--api-" class="anchor" href="#angular-js--directive---factory--node--api-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Angular JS { Directive - Factory } Node { Api }</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="td-30-démarrage-projet" class="anchor" href="#td-30-de%CC%81marrage-projet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TD 3.0 Démarrage projet</h2>
+
+<ul>
+<li>Avoir fait les pre requis du TD2</li>
+<li>Récupérer la correction du TD2 et copie le tout dans votre répertoire</li>
+</ul>
+
+<h2>
+<a id="td-31-update-de-larchitecture" class="anchor" href="#td-31-update-de-larchitecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TD 3.1 Update de l‘architecture</h2>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="objectif" class="anchor" href="#objectif" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objectif</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Alleger la visibilité du code et factoriser le développement. Ajouter des models</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="procédure" class="anchor" href="#proce%CC%81dure" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Procédure</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Faire une directive commune pour les experiences professionnelles et formations</li>
+<li>Faire une directive commune pour les loisirs et les compétences</li>
+<li>Ajouter une factory Person et Resume pour les lier avec l’API et utiliser l’heritage pour lier a _model et _collection.</li>
+<li>Faire une directive pour externaliser le person-card [ bonus ]</li>
+</ul>
+
+<h2>
+<a id="td-32-formulaire-de-contact-candidat" class="anchor" href="#td-32-formulaire-de-contact-candidat" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TD 3.2 Formulaire de contact candidat</h2>
+
+<h3>
+<a id="objectif-1" class="anchor" href="#objectif-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objectif</h3>
+
+<p>Débuter une l’interface de saisie tout en utilisant un service externe</p>
+
+<h3>
+<a id="procedure" class="anchor" href="#procedure" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Procedure</h3>
+
+<ul>
+<li>Ajouter un bouton contact sur chaque CV</li>
+<li>Ajouter un action de click qui ouvrira une dialog box</li>
+<li>Dans cette dialog box :
+
+<ul>
+<li>Un rappel de la personne à contacter ( easy si bonus td3.1 effectué)</li>
+<li>Un formulaire de contact ( simple juste un champs text area avec limitation à 100 caractères ) * Un bouton valider &gt; click : fermeture dialog box + toast service</li>
+<li>Un bouton annuler &gt; juste fermeture de la dialog box</li>
+</ul>
+</li>
+</ul>
+
+<p>Une fois API disponible ( vous pouvez faire le TD3.3 en attendant ;) )</p>
+
+<ul>
+<li>Lancer une méthode $http.post après la validation du formulaire avec les informations vers l’API</li>
+<li>Sur le CV ajouter un bouton pour visualiser les différentes prises de contact
+
+<ul>
+<li>Nouvelle pages avec routes et directives qui font appel à l’API pour afficher toutes les prises de contact</li>
+<li>Sur cette nouvelle page sera présent un rappel de la personne en cours, du titre du CV ainsi que la liste des prises de contact</li>
+<li>Bien entendu, la sidenav est toujours disponible. (si TD3.3 )</li>
+</ul>
+</li>
+<li>Ne pas oublier de créer un modèle et une collection handskahe.</li>
+</ul>
+
+<h3>
+<a id="link-" class="anchor" href="#link-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Link :</h3>
+
+<ul>
+<li>
+<a href="https://material.angularjs.org/latest/demo/input">https://material.angularjs.org/latest/demo/input</a> * <a href="https://material.angularjs.org/latest/demo/toast">https://material.angularjs.org/latest/demo/toast</a>
+</li>
+<li>
+<a href="https://material.angularjs.org/latest/demo/dialog">https://material.angularjs.org/latest/demo/dialog</a> * <a href="https://material.angularjs.org/latest/demo/button">https://material.angularjs.org/latest/demo/button</a>
+</li>
+</ul>
+
+<h2>
+<a id="td-33-utilisation-de-material-angular--bonus-" class="anchor" href="#td-33-utilisation-de-material-angular--bonus-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TD 3.3 Utilisation de Material Angular [ BONUS ]</h2>
+
+<h3>
+<a id="objectif-2" class="anchor" href="#objectif-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objectif</h3>
+
+<p>Manipuler un peu material angular</p>
+
+<h3>
+<a id="procedure-1" class="anchor" href="#procedure-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Procedure</h3>
+
+<ul>
+<li>Ajouter 
+
+<ul>
+<li>Ajouter une sidenav comprenant le moteur de recherche</li>
+<li>Ajouter un bouton d’affichage de la sidenav quand la resolution de l’écran est faible</li>
+</ul>
+</li>
+</ul>
+
+<h3>
+<a id="link" class="anchor" href="#link" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Link</h3>
+
+<ul>
+<li><a href="https://material.angularjs.org/latest/demo/sidenav">https://material.angularjs.org/latest/demo/sidenav</a></li>
+<li><a href="https://material.angularjs.org/latest/demo/toolbar">https://material.angularjs.org/latest/demo/toolbar</a></li>
+</ul>
+
+<h2>
+<a id="td34-sauvegarder-les-demandes-de-contacts" class="anchor" href="#td34-sauvegarder-les-demandes-de-contacts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TD3.4 Sauvegarder les demandes de contacts</h2>
+
+<h3>
+<a id="objectif-3" class="anchor" href="#objectif-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Objectif</h3>
+
+<p>Créer une interaction entre API et le Web</p>
+
+<h3>
+<a id="procédures" class="anchor" href="#proce%CC%81dures" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Procédures</h3>
+
+<ul>
+<li>Créer une route en methods POST qui va recevoir les informations pour l’enregistrement en base de données. /resume/:id_resume/handshakes</li>
+<li>Créer un route pour un CV en méthode GET pour obtenir tous les demandes de prises de contact /id_resume/:id_id_resume/handshakes</li>
+<li>Créer un nouveau model de prise de contact pour l’enregistrement</li>
+<li>Créer un controller pour la sauvegarde et le chargement</li>
+<li>Lier la prise de contact avec un CV.</li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/MadStain/L3WebTD3">L3webtd3</a> is maintained by <a href="https://github.com/MadStain">MadStain</a>.</span>
